--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://blog.fireflylabs.ai"
-title = "Ryan's Blog"
+title = "Ryan's Musings"
 theme = "etch"
 languageCode = "en-US"
 enableInlineShortcodes = true
@@ -8,7 +8,7 @@ pygmentsUseClasses = true
 
 [params]
   description = "Your site description"
-  copyright = "Copyright © 2022 Firefly Labs"
+  copyright = "Built using Hugo Framework (with Etch theme) on Cloudflare Pages"
   dark = "auto"
   highlight = true
 
